#2316 fixed alignment

--- a/grails-app/assets/stylesheets/common-bs4.css
+++ b/grails-app/assets/stylesheets/common-bs4.css
@@ -56,13 +56,6 @@
     border: none;
 }
 
-.row-eq-height {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-}
-
 .pointer {
     cursor: pointer;
 }
